# restora

./: README.md  index.html  package-lock.json  package.json
.github/workflows/: build.yml
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  recovery.rs
src/styles/: global.css
